--- a/package.json
+++ b/package.json
@@ -1,110 +1,36 @@
 {
-    "name": "@emodyz/node-downloader",
-    "version": "1.5.0",
-    "description": "File Downloader",
-    "main": "build/main/index.js",
-    "typings": "build/main/index.d.ts",
-    "module": "build/module/index.js",
-    "repository": "https://github.com/emodyz/NodeDownloader",
-    "license": "MIT",
-    "keywords": [],
-    "scripts": {
-        "build": "run-p build:*",
-        "build:main": "tsc -p tsconfig.json",
-        "build:module": "tsc -p tsconfig.module.json",
-        "fix": "run-s fix:*",
-        "fix:prettier": "prettier \"src/**/*.ts\" --write",
-        "fix:lint": "eslint src --ext .ts --fix",
-        "test": "run-s build test:*",
-        "test:lint": "eslint src --ext .ts",
-        "test:prettier": "prettier \"src/**/*.ts\" --list-different",
-        "test:unit": "nyc --silent ava",
-        "check-cli": "run-s test diff-integration-tests check-integration-tests",
-        "check-integration-tests": "run-s check-integration-test:*",
-        "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
-        "watch": "run-s watch:build watch:test",
-        "watch:build": "tsc -p tsconfig.json -w",
-        "watch:test": "nyc --silent ava --watch",
-        "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
-        "cov:html": "nyc report --reporter=html",
-        "cov:lcov": "nyc report --reporter=lcov",
-        "cov:send": "run-s cov:lcov && codecov",
-        "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-        "doc": "run-s doc:html && open-cli build/docs/index.html",
-        "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
-        "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
-        "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-        "version": "standard-version",
-        "reset-hard": "git clean -dfx && git reset --hard && npm i",
-        "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-        "prepublish": "npm run build"
-    },
-    "engines": {
-        "node": ">=10"
-    },
-    "dependencies": {
-        "node-downloader-helper": "1.0.15"
-    },
-    "devDependencies": {
-        "@ava/typescript": "^1.1.1",
-        "@istanbuljs/nyc-config-typescript": "^1.0.1",
-        "@types/node": "^14.14.13",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
-        "ava": "^3.14.0",
-        "codecov": "^3.5.0",
-        "cspell": "^4.2.5",
-        "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^7.15.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-eslint-comments": "^3.2.0",
-        "eslint-plugin-import": "^2.22.0",
-        "gh-pages": "^3.1.0",
-        "npm-run-all": "^4.1.5",
-        "nyc": "^15.1.0",
-        "open-cli": "^6.0.1",
-        "prettier": "^2.2.1",
-        "standard-version": "^9.0.0",
-        "ts-node": "^9.1.1",
-        "typedoc": "^0.19.0",
-        "typescript": "^4.1.3"
-    },
-    "files": [
-        "build/main",
-        "build/module",
-        "!**/*.spec.*",
-        "CHANGELOG.md",
-        "LICENSE",
-        "README.md",
-        "package.json"
-    ],
-    "ava": {
-        "failFast": true,
-        "timeout": "60s",
-        "typescript": {
-            "rewritePaths": {
-                "src/": "build/main/"
-            }
-        },
-        "ignoredByWatcher": [
-            "downloads"
-        ],
-        "files": [
-            "!build/module/**"
-        ]
-    },
-    "config": {
-        "commitizen": {
-            "path": "cz-conventional-changelog"
-        }
-    },
-    "prettier": {
-        "singleQuote": true
-    },
-    "nyc": {
-        "extends": "@istanbuljs/nyc-config-typescript",
-        "exclude": [
-            "**/*.spec.js"
-        ]
-    }
+  "name": "@emodyz/node-downloader",
+  "version": "2.0.0-RC.1",
+  "description": "Node file downloader",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emodyz/NodeDownloader.git"
+  },
+  "keywords": [
+    "node",
+    "downloader",
+    "file",
+    "checksum",
+    "integrity"
+  ],
+  "author": "Léo HUBERT",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/emodyz/NodeDownloader/issues"
+  },
+  "homepage": "https://github.com/emodyz/NodeDownloader#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.41",
+    "node-downloader-helper": "^1.0.18",
+    "typescript": "^4.2.4"
+  }
 }
