--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "test": "jest",
     "prepare": "npm run build"
   },
   "repository": {
@@ -29,8 +30,15 @@
   },
   "homepage": "https://github.com/emodyz/NodeDownloader#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "node-downloader-helper": "^1.0.18",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
