--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emodyz/node-downloader",
-  "version": "2.0.0-RC.1",
+  "version": "2.0.0-RC.2",
   "description": "Node file downloader",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,7 @@
     "checksum",
     "integrity"
   ],
-  "author": "Léo HUBERT",
+  "author": "Emodyz",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/emodyz/NodeDownloader/issues"
@@ -37,8 +38,10 @@
     "@types/node": "^14.14.41",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "node-downloader-helper": "^1.0.18",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "node-downloader-helper": "^1.0.18"
   }
 }
