--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emodyz/node-downloader",
-  "version": "2.0.0-RC.4",
+  "version": "2.0.0-RC.5",
   "description": "Node file downloader",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "npm run build && jest",
     "prepare": "npm run build",
     "prepublish": "npm run build"
   },
