--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emodyz/node-downloader",
-  "version": "2.0.0-RC.5",
+  "version": "2.0.0",
   "description": "Node file downloader",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
