--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
       - run: npm ci
       - run: echo "Creating release... ${GITHUB_REF#refs/heads/}"
       - run: npm version ${GITHUB_REF#refs/heads/} --no-git-tag-version
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} 
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
