--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,20 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get tag
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+        with:
+        # Optionally strip `v` prefix
+        strip_v: true
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: echo "Creating release... ${GITHUB_REF#refs/heads/}"
-      - run: npm version ${GITHUB_REF#refs/heads/} --no-git-tag-version
+      - run: echo "Creating release... ${{steps.tag.outputs.tag}}"
+      - run: npm version ${{steps.tag.outputs.tag}} --no-git-tag-version
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
@@ -43,4 +49,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          title: ${GITHUB_REF#refs/heads/}
+          title: ${{steps.tag.outputs.tag}}
