--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,10 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Publish release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ master, dev ]
+    # tags:
+    #   - 'v*.*.*'
 
 jobs:
   build:
@@ -34,7 +32,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: echo "Creating release... $GITHUB_REF_NAME"
-      - name: "Creating release..."
+      - name: 'Deploy pre-release'
+        if: contains('$GITHUB_REF_NAME', '-RC') == true
+        run: hub release create --prerelease -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME 
+      - name: "Deploy release"
+        if: contains('$GITHUB_REF_NAME', '-RC') == false
         run: hub release create -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
