--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - run: echo "Creating release... $GITHUB_REF_NAME"
       - name: 'Deploy pre-release'
         if: contains(github.ref_name, '-RC') == true
-        run: hub release create --prerelease -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME 
+        run: hub release create -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME --prerelease
       - name: "Deploy release"
         if: contains(github.ref_name, '-RC') == false
         run: hub release create -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME 
