--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
       - name: 'Deploy pre-release'
         if: contains(github.ref_name, '-RC') == true
         run: hub release create -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME --prerelease
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Deploy release"
         if: contains(github.ref_name, '-RC') == false
         run: hub release create -m "Release $GITHUB_REF_NAME" $GITHUB_REF_NAME 
